// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mapped Components Accept element attributes. 1`] = `
<div
  className="box-size-1"
  id="my-id"
/>
`;

exports[`Mapped Components Accepts classNames. 1`] = `
<div
  className="my-class"
/>
`;

exports[`Mapped Components Accepts classNames. 2`] = `
<div
  className="box-size-1 my-class"
/>
`;

exports[`Mapped Components Accepts functions as arguments. 1`] = `
<div
  className="box-size-1 has-size"
/>
`;

exports[`Mapped Components Add responsive classes when passing an array. 1`] = `
<div
  className="box-size-1 md-box-size-2 lg-box-size-3"
/>
`;

exports[`Mapped Components Block attributes from an element. 1`] = `
<div
  className={null}
/>
`;

exports[`Mapped Components Create a component. 1`] = `
<div
  className="box-size-1"
>
  Hello, World!
</div>
`;

exports[`Mapped Components Prepend a class to the class list 1`] = `
<div
  className="box box-size-1"
/>
`;

exports[`Mapped Components Reject null values. 1`] = `
<div
  className={null}
/>
`;

exports[`Mapped Components Transform the HTML tag 1`] = `
<h2
  className={null}
/>
`;
